fix(front-end): alignement hosting marseille
hébergement Marseille et les cards sont alignés.

--- a/css/style.css
+++ b/css/style.css
@@ -364,8 +364,9 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin-top: 10px;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
@@ -593,8 +594,9 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     margin-top: 10px;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
